--- a/pom.xml
+++ b/pom.xml
@@ -139,5 +139,48 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>reportng</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <goal>process-e2e</goal>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>src/test/resources/reportng.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                            <systemPropertyVariables>
+                                <testee.it.reportng.title>e2e</testee.it.reportng.title>
+                                <testee.it.reportng.slack>false</testee.it.reportng.slack>
+                                <testee.it.reportng.slack.token>xxxx-xxxx-xxxx-xxxx</testee.it.reportng.slack.token>
+                                <testee.it.reportng.slack.chanel>xxxx</testee.it.reportng.slack.chanel>
+                            </systemPropertyVariables>
+                            <properties>
+                                <property>
+                                    <name>usedefaultlisteners</name>
+                                    <value>false</value>
+                                </property>
+                                <property>
+                                    <name>listener</name>
+                                    <value>testee.it.reportng.HTMLReporter</value>
+                                </property>
+                                <property>
+                                    <name>suitethreadpoolsize</name>
+                                    <value>1</value>
+                                </property>
+                            </properties>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
