`reportng` profile should be not activeByDefault

--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
         <profile>
             <id>reportng</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
