--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <kotlin.version>1.5.21</kotlin.version>
-        <full-artifact-name>target/${project.artifactId}-${project.version}.jar</full-artifact-name>
+        <kotlin.version>1.5.30</kotlin.version>
+        <full-artifact-name>target/${project.artifactId}-${project.version}-small.jar</full-artifact-name>
     </properties>
-
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub</name>
-            <url>https://maven.pkg.github.com/ysura/yroom</url>
-        </repository>
-    </distributionManagement>
 
     <build>
         <resources>
@@ -104,13 +96,18 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
-                    <createSourcesJar>true</createSourcesJar>
-                    <shadeSourcesContent>true</shadeSourcesContent>
+                    <createSourcesJar>false</createSourcesJar>
+                    <shadeSourcesContent>false</shadeSourcesContent>
                     <shadedArtifactAttached>true</shadedArtifactAttached>
                     <artifactSet>
                         <excludes>
                             <exclude>org.jetbrains*</exclude>
                             <exclude>org.apache.maven*</exclude>
+                            <exclude>org.apache.maven*</exclude>
+                            <exclude>org.springframework:spring-beans*</exclude>
+                            <exclude>org.springframework:spring-core*</exclude>
+                            <exclude>org.springframework:spring-jcl*</exclude>
+                            <exclude>org.testng*</exclude>
                         </excludes>
                     </artifactSet>
                 </configuration>
@@ -161,9 +158,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.squareup.retrofit</groupId>
-            <artifactId>retrofit</artifactId>
-            <version>1.9.0</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
             <scope>compile</scope>
         </dependency>
         <!-- kotlin -->
