--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <kotlin.version>1.5.30</kotlin.version>
-        <full-artifact-name>target/${project.artifactId}-${project.version}-small.jar</full-artifact-name>
+        <full-artifact-name>target/${project.artifactId}-${project.version}.jar</full-artifact-name>
     </properties>
 
     <build>
