--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,6 @@
                         <excludes>
                             <exclude>org.jetbrains*</exclude>
                             <exclude>org.apache.maven*</exclude>
-                            <exclude>org.apache.maven*</exclude>
                             <exclude>org.springframework:spring-beans*</exclude>
                             <exclude>org.springframework:spring-core*</exclude>
                             <exclude>org.springframework:spring-jcl*</exclude>
@@ -161,6 +160,12 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- kotlin -->
