reportng 1.3.9 - kotlin: 1.5.31 - RuntimeTestListener: generate intermediate reports during test execution (without multithreading)

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,10 @@
                                 </property>
                                 <property>
                                     <name>listener</name>
+                                    <value>testee.it.reportng.RuntimeTestListener</value>
+                                </property>
+                                <property>
+                                    <name>reporter</name>
                                     <value>testee.it.reportng.HTMLReporter</value>
                                 </property>
                                 <property>
