--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,8 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify surefire:test -Dsurefire=true
-
       - name: Upload e2e test result as artifact on GitHub
+        if: ${{ always() }}
         uses: actions/upload-artifact@v3
         with:
           name: test_reports
