--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,12 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Build with Maven
+      - name: Run normal test
         run: mvn --batch-mode --update-snapshots verify surefire:test -Dsurefire=true
-      - name: Upload e2e test result as artifact on GitHub
+      - name: Run normal test
         if: ${{ always() }}
+        run: mvn --batch-mode --update-snapshots verify
+      - name: Upload e2e test result as artifact on GitHub
         uses: actions/upload-artifact@v3
         with:
           name: test_reports
