--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,10 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Run normal test
+      - name: Run surefire [also failed] tests
         run: mvn --batch-mode --update-snapshots verify surefire:test -Dsurefire=true
       - name: Run normal test
-        if: ${{ always() }}
+        if: success() || failure()
         run: mvn --batch-mode --update-snapshots verify
       - name: Upload e2e test result as artifact on GitHub
         uses: actions/upload-artifact@v3
