--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run normal test
         run: mvn --batch-mode --update-snapshots verify
       - name: Run surefire [also failed] tests
+        continue-on-error: true
         run: mvn --batch-mode --update-snapshots verify surefire:test -Dsurefire=true
       - name: Upload e2e test result as artifact on GitHub
         if: ${{ always() }}
