--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,11 @@ jobs:
         uses: actions/checkout@v3
 
       # Runs maven test
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
       - name: Run normal test
         run: mvn --batch-mode --update-snapshots verify
       - name: Run surefire [also failed] tests
