GitHub actions: jdk-17-zulu

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'zulu'
       - name: Run normal test
         run: mvn --batch-mode --update-snapshots verify
       - name: Run surefire [also failed] tests
