--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-12
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
