--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,16 @@
             <version>1.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.1</version>
+        </dependency>
         <!-- for slack integration -->
         <dependency>
             <groupId>org.springframework</groupId>
